--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,50 @@
 @import "reset.css";
 
-p, ul, small {
-	color: #777777;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+body {
+	background-color: #eee;
 }
 
 header {
 	background-color: #ffffff;
 	border: 1px solid #cccccc;
+	width: 100%;
 }
 
 h1 {
 	color: #ffffff;
 	background-color: #4aaaa5;
+	font-size: 36px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 h2, h3 {
 	color: #4aaaa5;
+	font-size: 24px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+p, ul, small {
+	color: #777777;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+#centered-div {
+	width: 75%;
+	margin: auto;
 }
 
 #main-content {
 	background-color: #ffffff;
 	border: 1px solid #dddddd;
+	float: left;
+	padding: 50px;
+}
+
+#headshot {
+	float: left;
 }
 
 footer {
 	background-color: #666666;
+	width: 100%;
 }
