--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,5 @@
 @import "reset.css";
 
-body {
-	background-color: #eee;
-}
-
-header {
-	background-color: #ffffff;
-	border: 1px solid #cccccc;
-	width: 100%;
-}
-
 h1 {
 	color: #ffffff;
 	background-color: #4aaaa5;
@@ -17,34 +7,51 @@ h1 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-h2, h3 {
+h2 {
 	color: #4aaaa5;
 	font-size: 24px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-p, ul, small {
+h3 {
+	color: #4aaaa5;
+	font-size: 20px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+p, nav > li > a, footer > small {
 	color: #777777;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
-#centered-div {
-	width: 75%;
-	margin: auto;
+header {
+	background-color: #ffffff;
+	border: 1px solid #cccccc;
 }
 
 #main-content {
+	width: 650px;
 	background-color: #ffffff;
 	border: 1px solid #dddddd;
 	float: left;
-	padding: 50px;
 }
 
-#headshot {
-	float: left;
+#sidebar {
+	width: 270px;
+	background-color: #ffffff;
+	border: 1px solid #dddddd;
+	float: right;
 }
 
 footer {
-	background-color: #666666;
 	width: 100%;
+	background-color: #666666;
+	position: absolute;
+	bottom: 0px;
+	clear: both;
+}
+
+.content-area {
+	width: 960px;
+	margin: auto;
 }
