--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,8 @@ h1 {
 	background-color: #4aaaa5;
 	font-size: 36px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
+	float: left;
+	padding: 20px 30px 20px 30px;
 }
 
 h2 {
@@ -19,9 +21,27 @@ h3 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-p, nav > li > a, footer > small {
+p, nav > ul > li, footer > small {
 	color: #777777;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+nav > ul {
+	line-height: 76px;
+	float: right;
+}
+
+nav > ul > li {
+	display: inline;
+	margin-left: 30px;
+}
+
+nav > ul > li > a {
+	text-decoration: none;
+}
+
+a:visited, a:hover, a:active {
+	color: #777777;
 }
 
 header {
@@ -54,4 +74,9 @@ footer {
 .content-area {
 	width: 960px;
 	margin: auto;
+	clear: both;
+}
+
+.clearfix {
+	overflow: auto;
 }
