done for night, finish content just need to style more esp portfolio, nav bar needs fixing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 @import "reset.css";
 
-html { 
+html, body { 
   background: url(../images/pw_maze_white.png) repeat;
+  height: 100%;
 }
 
 h1 {
@@ -27,7 +28,7 @@ h3 {
 	padding: 30px;
 }
 
-p, nav > ul > li {
+p, nav > ul > li, label, input, textarea {
 	color: #777777;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
@@ -77,6 +78,7 @@ header {
 	border: 1px solid #dddddd;
 	float: left;
 	margin-top: 30px;
+	padding-bottom: 639;
 }
 
 #sidebar {
@@ -112,7 +114,7 @@ footer {
 	width: 100%;
 	background-color: #666666;
 	position: absolute;
-	bottom: 0px;
+	bottom: 0;
 	clear: both;
 	text-align: center;
 	padding: 30px 0 30px 0;
@@ -126,6 +128,11 @@ footer {
 
 .clearfix {
 	overflow: auto;
+}
+
+#wrapper {
+	min-height: 100%;
+	position: relative;
 }
 
 #headshot {
@@ -156,4 +163,61 @@ footer {
 	width: 50px;
 	height: 50px;
 	margin: 20px 0 25px 10px;
+}
+
+form {
+	margin: 30px;
+}
+
+textarea {
+	display: block;
+	margin: 8px 0 20px 0;
+	width: 578px;
+	max-width: 578px;
+	height: 150px;
+	border: 1px solid #ccc;
+	padding: 10px;
+	font-size: 14px;
+}
+
+input[type=text], input[type=email] {
+	display: block;
+	margin: 8px 0 20px 0;
+	width: 578px;
+    border: 1px solid #ccc; 
+    padding: 10px;
+    font-size: 14px;
+}
+
+input[type=text]:focus {
+    border-color:#333333;
+}
+
+input[type=submit] {
+	color: #ffffff;
+	font-size: 16px;
+    padding: 15px 15px; 
+    background: #4aaaa5;
+    border: 0 none;
+    cursor:pointer;
+    width: 125px;
+}
+
+.proj-div {
+	margin-left: 30px;
+	margin-top: -40px;
+}
+
+.proj-div a {
+	position: relative;
+	left: 0;
+	top: 190px;
+	width: 310px;
+	padding: 20px;
+	display: block;
+	text-align: center;
+	font-size: 22px;
+	color: #ffffff;
+	background: #4aaaa5;
+	text-decoration: none;
 }
