--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,7 @@ hr {
 }
 
 footer {
+	height: 25px;
 	width: 100%;
 	background-color: #666666;
 	position: absolute;
@@ -128,6 +129,11 @@ footer {
 
 .clearfix {
 	overflow: auto;
+}
+
+.push {
+	clear: both;
+	height: 118px;
 }
 
 #wrapper {
