--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,7 +177,7 @@ form {
 
 textarea {
 	display: block;
-	margin: 8px 0 20px 0;
+	margin: 8px 0 20px -5px;
 	width: 578px;
 	max-width: 578px;
 	height: 150px;
@@ -188,7 +188,7 @@ textarea {
 
 input[type=text], input[type=email] {
 	display: block;
-	margin: 8px 0 20px 0;
+	margin: 8px 0 20px -5px;
 	width: 578px;
     border: 1px solid #ccc; 
     padding: 10px;
@@ -205,25 +205,31 @@ input[type=submit] {
     padding: 15px 15px; 
     background: #4aaaa5;
     border: 0 none;
-    cursor:pointer;
+    cursor: pointer;
     width: 125px;
 }
 
 .proj-div {
-	margin-left: 30px;
-	margin-top: -40px;
+	width: 275px;
+	height: 200px;
+	float: left;
+	padding: 30px 0 35px 32px;
 }
 
-.proj-div a {
-	position: relative;
-	left: 0;
-	top: 190px;
-	width: 310px;
-	padding: 20px;
+.proj-div > a {
 	display: block;
 	text-align: center;
-	font-size: 22px;
 	color: #ffffff;
 	background: #4aaaa5;
+	padding: 20px;
+	font-size: 20px;
 	text-decoration: none;
+	position: relative;
+	bottom: 75px;
+}
+
+#empty {
+	background: red;
+	width: 400px;
+	height: 50px;
 }
